--- a/shared/assets/locales/en/translation.json
+++ b/shared/assets/locales/en/translation.json
@@ -14,5 +14,6 @@
     "Materialdescription": "Material description",
     "Materialcharacteristic": "Material characteristic",
     "Format": "Format",
-    "person": "Person"
+    "person": "Person",
+    "keyword": "Keyword"
 }
