--- a/shared/assets/locales/fr/translation.json
+++ b/shared/assets/locales/fr/translation.json
@@ -14,5 +14,6 @@
     "Materialdescription": "Description materielle",
     "Materialcharacteristic": "Caractéristiques materielles",
     "Format": "Format",
-    "person": "Personne"
+    "person": "Personne",
+    "keyword": "Keyword"
 }
