--- a/shared/assets/locales/en/translation.json
+++ b/shared/assets/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-    "brandTitle": "Karma Kagyu Libraries - Yeshe",
+    "brandTitle": "Karma Kagyu Libraries",
     "search": "Search",
     "searchname": "Search results",
     "searchinvite": "fill search",
