--- a/shared/assets/locales/fr/translation.json
+++ b/shared/assets/locales/fr/translation.json
@@ -1,5 +1,5 @@
 {
-    "brandTitle": "Karma Kagyu Libraries - Yeshe",
+    "brandTitle": "Karma Kagyu Libraries",
     "search": "Chercher",
     "searchname": "Recherche",
     "searchinvite": "Saisir recherche",
