--- a/shared/assets/locales/en/translation.json
+++ b/shared/assets/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
-    "brandTitle": "Karma Kagyu Libraries",
+    "brandTitle": "Karma Kagyu Libraries ",
     "search": "Search",
-    "searchname": "Search results",
+    "searchname": "Search",
     "searchinvite": "fill search",
     "notice": "Bibiographic record",
     "Subtitle": "Sub title",
