--- a/shared/assets/locales/fr/translation.json
+++ b/shared/assets/locales/fr/translation.json
@@ -15,5 +15,8 @@
     "Materialcharacteristic": "Caractéristiques materielles",
     "Format": "Format",
     "person": "Personne",
-    "keyword": "Keyword"
+    "keyword": "Keyword",
+    "printer": "Imprimeur",
+    "publisher": "Editeur",
+    "yearofpublication": "Année de publication"
 }
