--- a/shared/assets/locales/en/translation.json
+++ b/shared/assets/locales/en/translation.json
@@ -1,22 +1,175 @@
 {
-    "brandTitle": "Karma Kagyu Libraries ",
-    "search": "Search",
-    "searchname": "Search",
-    "searchinvite": "fill search",
-    "notice": "Bibiographic record",
-    "Subtitle": "Sub title",
-    "Maintitle": "Main title",
-    "Genre": "Genre",
-    "Theme": "Theme",
-    "Bibliographiclevel": "Bibliographic level",
-    "Documenttype": "Document type",
-    "Materialtype": "Material type",
-    "Materialdescription": "Material description",
-    "Materialcharacteristic": "Material characteristic",
-    "Format": "Format",
-    "person": "Person",
-    "keyword": "Keyword",
-    "printer": "Printer",
-    "publisher": "Publisher",
-    "yearofpublication": "Year of publication"
+    "GLO_RELEASE": "Version 4.02. - 25/02/2019 15:14",
+    "GLO_BRANDTITLE": "Karma Kagyu Libraries",
+    "GLO_SAVE": "Save",
+    "GLO_CANCEL": "Cancel",
+    "SEA_TITLE": "Search",
+    "KEY_TITLE": "Keyword",
+    "KEY_ALIASES": "Aliases",
+    "KEY_NAME": "Name",
+    "KEY_NOTE": "Note",
+    "KEY_TYPE": "Type",
+    "KEY_LINKED": "Notices linked with the keyword",
+    "KEY_LANGUAGE": "Language",
+    "KEY_DEFAULT_LANGUAGE": "Default Language",
+    "KEY_REMOVE_ALIAS": "Remove alias",
+    "KEY_CONFIRM_REMOVE": "Please confirm you want to remove the keyword alias",
+    "KEY_ROLE": "Role",
+    "KEY_ADDFFD": "Add a keyword",
+    "PERS_TITLE": "Person",
+    "PERS_ALIASES": "Aliases",
+    "PERS_NAME": "Nom",
+    "PERS_NOTE": "Note",
+    "PERS_MULTIMEDIA": "Multimedia",
+    "PERS_TYPE": "Type",
+    "PERS_LINKED": "Notices linked with the person",
+    "PERS_IMAGE": "Image",
+    "PERS_INFO": "Info",
+    "PERS_DEFAULT_LANGUAGE": "Default Language",
+    "PERS_ROLE": "Role",
+    "PERS_ADDFFD": "Add a role",
+    "NAV_MORESEARCH": "More search",
+    "NAV_SIGNIN": "Sign in",
+    "NAV_SIGNOUT": "Sign out",
+    "NAV_Actions": "Actions",
+    "NAV_NEWNOTICE": "New bibliographic record",
+    "NAV_NEWPUBLISHER": "New publisher",
+    "NAV_NEWPRINTER": "New printer",
+    "NAV_NEWKEYWORD": "New keyword",
+    "NAV_NEWPERSON": "New Person",
+    "NAV_NEWCOLLECTION": "New collection",
+    "NAV_USERS": "Manage users",
+    "NAV_BOOKLENDING": "Book lending",
+    "NAV_CATALOGS": "Catalogs",
+    "NAV_MAINTENACE": "App maintenance",
+    "NAV_COMPANYNAME": "Karma Kagyu Libraries",
+    "NAV_GREETING1": "Welcome to",
+    "NAV_GREETING2": "Karma Kagyu Libraries",
+    "NAV_GREETING3": "catalogue",
+    "COLL_TITLE": "Collection",
+    "COLL_NAME": "Name",
+    "COLL_NOTE": "Note",
+    "COLL_LINKED": "Notices linked with the collection",
+    "PUB_TITLE": "Publisher",
+    "PUB_NAME": "Name",
+    "PUB_WEB": "Web site",
+    "PUB_MAIL": "Mail",
+    "PUB_ADD1": "Address 1",
+    "PUB_ADD2": "Address 2",
+    "PUB_ADD3": "Address 3",
+    "PUB_ADD4": "Address 4",
+    "PUB_CITY": "City",
+    "PUB_ZIP": "Zip code",
+    "PUB_STATE": "State",
+    "PUB_COUNTRY": "Country",
+    "PUB_PHONE": "Phone",
+    "PUB_FAX": "Note",
+    "PUB_CONTACTNAME": "Contact name",
+    "PUB_CONTACTMAIL": "Contact mail",
+    "PUB_CONTACTFAX": "Contact fax",
+    "PUB_CONTACTPHONE": "Contact phone",
+    "PUB_CREATED": "Created",
+    "PUB_MODIFIED": "Last modified",
+    "PUB_LINKED": "Notices linked with the publisher",
+    "PRI_TITLE": "Printer",
+    "PRI_NAME": "Name",
+    "PRI_WEB": "Web site",
+    "PRI_MAIL": "Mail",
+    "PRI_ADD1": "Address 1",
+    "PRI_ADD2": "Address 2",
+    "PRI_ADD3": "Address 3",
+    "PRI_ADD4": "Address 4",
+    "PRI_CITY": "City",
+    "PRI_ZIP": "Zip code",
+    "PRI_STATE": "State",
+    "PRI_COUNTRY": "Country",
+    "PRI_PHONE": "Phone",
+    "PRI_FAX": "Fax",
+    "PRI_CONTACTNAME": "Contact name",
+    "PRI_CONTACTMAIL": "Contact mail",
+    "PRI_CONTACTFAX": "Contact fax",
+    "PRI_CONTACTPHONE": "Contact phone",
+    "PRI_CREATED": "Created",
+    "PRI_MODIFIED": "Last modified",
+    "PRI_LINKED": "Notices linked with the printer",
+    "NOT_TITLE": "Bibliographic record",
+    "NOT_TITLETITLE": "Bibliographic record titles",
+    "NOT_TITLES": "Titles",
+    "NOT_MAINTITLE": "Main title",
+    "NOT_SUBTITLE": "Sub title",
+    "NOT_PARALLELTITLE": "Parallel title",
+    "NOT_ABREVIATEDTITLE": "Abreviated title",
+    "NOT_ORIGINALTITLE": "Original title",
+    "NOT_MAINTRANSTITLE": "Main title translated",
+    "NOT_OTHERTITLE": "Other Title",
+    "NOT_DESCRIPTION": "Description",
+    "NOT_GENRE": "Genre",
+    "NOT_THEME": "Theme",
+    "NOT_BIBLIOGRAPHICLEVEL": "Bibliographic level",
+    "NOT_DOCUMENTTYPE": "Document type",
+    "NOT_MATERIALTYPE": "Material type",
+    "NOT_MATERIALDESCRIPTION": "Material description",
+    "NOT_MATERIALCHARACTERISTIC": "Material characteristic",
+    "NOT_MATERIALFORMAT": "Format",
+    "NOT_OTHEMATERIAL": "Other material",
+    "NOT_TRANSLITERATION": "Transliteration",
+    "NOT_CHECKINSTATE": "Checkin state ",
+    "NOT_INFO": "Info",
+    "NOT_IMAGE": "Image",
+    "NOT_PUBLICATION": "Publication",
+    "NOT_YEAROFPUBLICATION": "Year of publication",
+    "NOT_PLACEOFPUBLICATION": "Place of publication",
+    "NOT_TYPEOFPUBLICATION": "Type of publication",
+    "NOT_NUMBERINCOLLECTION": "Number in collection",
+    "NOT_ORIENTALDATE": "Oriental date",
+    "NOT_ISBN": "ISBN/ISNN",
+    "NOT_EAN": "EAN",
+    "NOT_OUTOFPRINT": "Out of print",
+    "NOT_PERSONSTITLE": "Persons",
+    "NOT_KERWORDSTITLE": "Keywords",
+    "NOT_LANGAUGESTITLE": "Languages",
+    "NOT_NOTESTITLE": "Notes",
+    "NOT_SUBRECORDSTITLE": "Bibliographic sub-records",
+    "NOT_MULTIMEDIASTITLE": "Multimedia",
+    "NOT_COPIESTITLE": "Copies",
+    "NOT_COPIESMISSING": "Missing",
+    "NOT_COPIESPHOTO": "Photocopie",
+    "NOT_COPIESANNOTATIONS": "Annotations",
+    "NOT_REFERENCEUSEONLY": "For reference use only",
+    "NOT_COPIESSHELFMARK": "Shelfmark",
+    "NOT_COPIESCONDITION": "Document condition",
+    "NOT_COPIESAQUISITION": "Acquisition",
+    "NOT_COPIESANOTE": "Note",
+    "NOT_COPIESCOTE": "Shelfmark",
+    "NOT_COPIESOWNER": "Owner",
+    "NOT_COPIESACTIONNEEDED": "Action needed",
+    "NOT_COPIESINFO": "Info",
+    "NOT_COPIESREDITCOPY": "Edit copy",
+    "NOT_COPIESREMOVECOPY": "Remove copy",
+    "NOT_SUBFATHERNOTICE": "Father record",
+    "NOT_SUBORDER": "Ranking",
+    "NOT_MAILSENT": "mail sent",
+    "LANG_LANGUAGETITLE": "Langue",
+    "LANG_NOTICELINKED": "Notices linked with the language",
+    "LANG_NAME": "Name",
+    "LANG_WEBSITE": "Web site",
+    "LANG_ROLE": "Role",
+    "LANG_ADDFFL": "Add a language",
+    "GENR_TITLE": "Genre",
+    "GENR_NAME": "Name",
+    "GENR_NOTE": "Note",
+    "GENR_NOTICESLINKED": "Notices linked with the genre",
+    "THEM_TITLE": "Theme",
+    "THEM_NAME": "Name",
+    "THEM_NOTE": "Note",
+    "THEM_NOTICESLINKED": "Notices linked with this theme",
+    "DOCT_TITLE": "Document type",
+    "DOCT_NAME": "Name",
+    "DOCT_NOTE": "Note",
+    "DOCT_NOTICESLINKED": "Notices linked with the document type",
+    "MATT_TITLE": "Material type",
+    "MATT_NAME": "Name",
+    "MATT_NOTE": "Note",
+    "MATT_NOTICESLINKED": "Notices linked with the material type",
+    "DOC_TITLE": "Documentation"
 }
