--- a/shared/assets/locales/fr/translation.json
+++ b/shared/assets/locales/fr/translation.json
@@ -1,22 +1,175 @@
 {
-    "brandTitle": "Karma Kagyu Libraries",
-    "search": "Chercher",
-    "searchname": "Recherche",
-    "searchinvite": "Saisir recherche",
-    "notice": "Notice",
-    "Subtitle": "Sub title",
-    "Maintitle": "Titre principal",
-    "Genre": "Genre",
-    "Theme": "Theme",
-    "Bibliographiclevel": "Niveau bibliographique",
-    "Documenttype": "Type de document ",
-    "Materialtype": "Type materiel ",
-    "Materialdescription": "Description materielle",
-    "Materialcharacteristic": "Caractéristiques materielles",
-    "Format": "Format",
-    "person": "Personne",
-    "keyword": "Keyword",
-    "printer": "Imprimeur",
-    "publisher": "Editeur",
-    "yearofpublication": "Année de publication"
+    "GLO_RELEASE": "Version 4.02. - 25/02/2019 15:14",
+    "GLO_BRANDTITLE": "Karma Kagyu Libraries",
+    "GLO_SAVE": "Sauver",
+    "GLO_CANCEL": "Annuler",
+    "SEA_TITLE": "Search",
+    "KEY_TITLE": "Mot clé",
+    "KEY_ALIASES": "Alias",
+    "KEY_NAME": "Nom",
+    "KEY_NOTE": "Note",
+    "KEY_TYPE": "Type",
+    "KEY_LINKED": "Notices reliées au mot clé",
+    "KEY_LANGUAGE": "Langue",
+    "KEY_DEFAULT_LANGUAGE": "Langue par default",
+    "KEY_REMOVE_ALIAS": "Supprimer l'alias",
+    "KEY_CONFIRM_REMOVE": "Merci de confirmer que vous souhaitez supprimer l'alias",
+    "KEY_ROLE": "Role",
+    "KEY_ADDFFK": "Ajoute un mot clé",
+    "PERS_TITLE": "Personnage",
+    "PERS_ALIASES": "Alias",
+    "PERS_NAME": "Nom",
+    "PERS_NOTE": "Note",
+    "PERS_MULTIMEDIA": "Multimedia",
+    "PERS_TYPE": "Type",
+    "PERS_LINKED": "Notices reliées au personnage",
+    "PERS_IMAGE": "Image",
+    "PERS_INFO": "Info",
+    "PERS_DEFAULT_LANGUAGE": "Langue par default",
+    "PERS_ROLE": "Role",
+    "PERS_ADDFFD": "Ajouter un personnage",
+    "NAV_MORESEARCH": "Recherche avancée",
+    "NAV_SIGNIN": "S'authentifier",
+    "NAV_SIGNOUT": "Se déconnecter",
+    "NAV_Actions": "Actions",
+    "NAV_NEWNOTICE": "Nouvelle notice",
+    "NAV_NEWPUBLISHER": "Nouvel éditeur",
+    "NAV_NEWPRINTER": "Nouvel imprimeur",
+    "NAV_NEWKEYWORD": "Nouveau mot clé",
+    "NAV_NEWPERSON": "Nouveau personnage",
+    "NAV_NEWCOLLECTION": "Nouvelle collection",
+    "NAV_USERS": "Gestion des utilisateurs",
+    "NAV_BOOKLENDING": "Prêt",
+    "NAV_CATALOGS": "Catalogues",
+    "NAV_MAINTENACE": "Maintenance",
+    "NAV_COMPANYNAME": "Karma Kagyu Libraries",
+    "NAV_GREETING1": "Bienvenue",
+    "NAV_GREETING2": "sur le catalogue des bibliothèques ",
+    "NAV_GREETING3": "Karma Kagyu ",
+    "COLL_TITLE": "Collection",
+    "COLL_NAME": "Nom",
+    "COLL_NOTE": "Note",
+    "COLL_LINKED": "Notices liées à la collection",
+    "PUB_TITLE": "Editeur",
+    "PUB_NAME": "Nom",
+    "PUB_WEB": "Site web",
+    "PUB_MAIL": "Mail",
+    "PUB_ADD1": "Adresse 1",
+    "PUB_ADD2": "Adresse 2",
+    "PUB_ADD3": "Adresse 3",
+    "PUB_ADD4": "Adresse 4",
+    "PUB_CITY": "Ville",
+    "PUB_ZIP": "Code postal",
+    "PUB_STATE": "Etat",
+    "PUB_COUNTRY": "Pays",
+    "PUB_PHONE": "Téléphone",
+    "PUB_FAX": "Note",
+    "PUB_CONTACTNAME": "Nom du contact",
+    "PUB_CONTACTMAIL": "Mail du contact",
+    "PUB_CONTACTFAX": "Fax du contact",
+    "PUB_CONTACTPHONE": "Téléphone du contact",
+    "PUB_CREATED": "Créé",
+    "PUB_MODIFIED": "Modifié",
+    "PUB_LINKED": "Notices liées à l'éditeur",
+    "PRI_TITLE": "Imprimeur",
+    "PRI_NAME": "Nom",
+    "PRI_WEB": "Site web",
+    "PRI_MAIL": "Mail",
+    "PRI_ADD1": "Adresse 1",
+    "PRI_ADD2": "Adresse 2",
+    "PRI_ADD3": "Adresse 3",
+    "PRI_ADD4": "Adresse 4",
+    "PRI_CITY": "Ville",
+    "PRI_ZIP": "Code postal",
+    "PRI_STATE": "Etat",
+    "PRI_COUNTRY": "Pays",
+    "PRI_PHONE": "Téléphone",
+    "PRI_FAX": "Fax",
+    "PRI_CONTACTNAME": "Nom du contact",
+    "PRI_CONTACTMAIL": "Mail du contact",
+    "PRI_CONTACTFAX": "Fax du contact",
+    "PRI_CONTACTPHONE": "Téléphone du contact",
+    "PRI_CREATED": "Créé",
+    "PRI_MODIFIED": "Modifié",
+    "PRI_LINKED": "Notices liées à l'imprimeur",
+    "NOT_TITLE": "Notice bibliographique",
+    "NOT_TITLETITLE": "Titres de la notice bibliographique",
+    "NOT_TITLES": "Titres",
+    "NOT_MAINTITLE": "Titre principal",
+    "NOT_SUBTITLE": "Sous titre",
+    "NOT_PARALLELTITLE": "Titre parallèle",
+    "NOT_ABREVIATEDTITLE": "Titre abrégé",
+    "NOT_ORIGINALTITLE": "Titre original",
+    "NOT_MAINTRANSTITLE": "Titre principal traduit",
+    "NOT_OTHERTITLE": "Autre titre",
+    "NOT_DESCRIPTION": "Description",
+    "NOT_GENRE": "Genre",
+    "NOT_THEME": "Thème",
+    "NOT_BIBLIOGRAPHICLEVEL": "Niveau bibliographique",
+    "NOT_DOCUMENTTYPE": "Type de document",
+    "NOT_MATERIALTYPE": "Type de matériel",
+    "NOT_MATERIALDESCRIPTION": "Descriptif matériel",
+    "NOT_MATERIALCHARACTERISTIC": "Caractéristiques matérielles",
+    "NOT_MATERIALFORMAT": "Format",
+    "NOT_OTHEMATERIAL": "Materiel autre",
+    "NOT_TRANSLITERATION": "Translitération",
+    "NOT_CHECKINSTATE": "Statut de cataloguage",
+    "NOT_INFO": "Info",
+    "NOT_IMAGE": "Image",
+    "NOT_PUBLICATION": "Publication",
+    "NOT_YEAROFPUBLICATION": "Année de publication",
+    "NOT_PLACEOFPUBLICATION": "Lieu de publication",
+    "NOT_TYPEOFPUBLICATION": "Type de publication",
+    "NOT_NUMBERINCOLLECTION": "Numéro dans la collection",
+    "NOT_ORIENTALDATE": "Date orientale",
+    "NOT_ISBN": "ISBN/ISNN",
+    "NOT_EAN": "EAN",
+    "NOT_OUTOFPRINT": "Plus édité",
+    "NOT_PERSONSTITLE": "Personnes",
+    "NOT_KERWORDSTITLE": "Mots clés",
+    "NOT_LANGAUGESTITLE": "Langues",
+    "NOT_NOTESTITLE": "Notes",
+    "NOT_SUBRECORDSTITLE": "Sous-notice",
+    "NOT_MULTIMEDIASTITLE": "Multimédia",
+    "NOT_COPIESTITLE": "Exemplaires",
+    "NOT_COPIESMISSING": "Manquant",
+    "NOT_COPIESPHOTO": "Photocopie",
+    "NOT_COPIESANNOTATIONS": "Annotations",
+    "NOT_REFERENCEUSEONLY": "Exclu du prêt",
+    "NOT_COPIESSHELFMARK": "N°unique",
+    "NOT_COPIESCONDITION": "Condition",
+    "NOT_COPIESAQUISITION": "Acquisition",
+    "NOT_COPIESANOTE": "Note",
+    "NOT_COPIESCOTE": "Cote",
+    "NOT_COPIESOWNER": "Bibliothèque",
+    "NOT_COPIESACTIONNEEDED": "Action à effectuer",
+    "NOT_COPIESINFO": "Info",
+    "NOT_COPIESREDITCOPY": "Modifier l'exemplaire",
+    "NOT_COPIESREMOVECOPY": "Supprimer l'exemplaire",
+    "NOT_SUBFATHERNOTICE": "Notice père",
+    "NOT_SUBORDER": "Ordre",
+    "NOT_MAILSENT": "Mail envoyé",
+    "LANG_LANGUAGETITLE": "Langue",
+    "LANG_NOTICELINKED": "Notices reliées à cette langue",
+    "LANG_NAME": "Nom",
+    "LANG_WEBSITE": "Site Web",
+    "LANG_ROLE": "Role",
+    "LANG_ADDFFL": "Ajoute une langue",
+    "GENR_TITLE": "Genre",
+    "GENR_NAME": "Nom",
+    "GENR_NOTE": "Note",
+    "GENR_NOTICESLINKED": "Notices liées à ce genre",
+    "THEM_TITLE": "Thème",
+    "THEM_NAME": "Nom",
+    "THEM_NOTE": "Note",
+    "THEM_NOTICESLINKED": "Notices liées à ce thème",
+    "DOCT_TITLE": "Type de document",
+    "DOCT_NAME": "Nom",
+    "DOCT_NOTE": "Note",
+    "DOCT_NOTICESLINKED": "Notices liées à ce type de document",
+    "MATT_TITLE": "Type de matériel",
+    "MATT_NAME": "Nnom",
+    "MATT_NOTE": "Note",
+    "MATT_NOTICESLINKED": "Notices liées à ce type de matériel",
+    "DOC_TITLE": "Documentation"
 }
