--- a/shared/assets/locales/fr/translation.json
+++ b/shared/assets/locales/fr/translation.json
@@ -4,7 +4,7 @@
     "GLO_SAVE": "Sauver",
     "GLO_CANCEL": "Annuler",
     "SEA_TITLE": "Search",
-    "KEY_TITLE": "Mot clé",
+    "KEY_TITLE": "Mots clés",
     "KEY_ALIASES": "Alias",
     "KEY_NAME": "Nom",
     "KEY_NOTE": "Note",
@@ -16,7 +16,7 @@
     "KEY_CONFIRM_REMOVE": "Merci de confirmer que vous souhaitez supprimer l'alias",
     "KEY_ROLE": "Role",
     "KEY_ADDFFK": "Ajoute un mot clé",
-    "PERS_TITLE": "Personnage",
+    "PERS_TITLE": "Personnes",
     "PERS_ALIASES": "Alias",
     "PERS_NAME": "Nom",
     "PERS_NOTE": "Note",
